load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "version.go",
    ],
    importpath = "github.com/golang-migrate/migrate/v4/cli",
    visibility = ["//visibility:public"],
    deps = ["//internal/cli:go_default_library"],
)

go_binary(
    name = "cli",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "docker",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
