load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "driver.go",
        "error.go",
        "util.go",
    ],
    importpath = "github.com/golang-migrate/migrate/v4/database",
    visibility = ["//visibility:public"],
    deps = ["//internal/url:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "driver_test.go",
        "parse_test.go",
        "util_test.go",
    ],
    embed = [":go_default_library"],
)
