load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["dktesting.go"],
    importpath = "github.com/golang-migrate/migrate/v4/dktesting",
    visibility = ["//visibility:public"],
    deps = ["@com_github_dhui_dktest//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["example_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_dhui_dktest//:go_default_library"],
)
