load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "version.go",
    ],
    importpath = "github.com/golang-migrate/migrate/v4/cmd/migrate",
    visibility = ["//visibility:private"],
    deps = ["//internal/cli:go_default_library"],
)

go_binary(
    name = "migrate",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
