load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["sqlite3.go"],
    importpath = "github.com/golang-migrate/migrate/v4/database/sqlite3",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//database:go_default_library",
        "@com_github_hashicorp_go_multierror//:go_default_library",
        "@com_github_mattn_go_sqlite3//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["sqlite3_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//:go_default_library",
        "//database/testing:go_default_library",
        "//source/file:go_default_library",
        "@com_github_mattn_go_sqlite3//:go_default_library",
    ],
)
