load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "migrate_testing.go",
        "testing.go",
    ],
    importpath = "github.com/golang-migrate/migrate/v4/database/testing",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//database:go_default_library",
    ],
)
