load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "commands.go",
        "log.go",
        "main.go",
    ],
    importpath = "github.com/golang-migrate/migrate/v4/internal/cli",
    visibility = ["//:__subpackages__"],
    deps = [
        "//:go_default_library",
        "//database:go_default_library",
        "//database/stub:go_default_library",
        "//source:go_default_library",
        "//source/file:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["commands_test.go"],
    embed = [":go_default_library"],
)
