load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["github_ee.go"],
    importpath = "github.com/golang-migrate/migrate/v4/source/github_ee",
    visibility = ["//visibility:public"],
    deps = [
        "//source:go_default_library",
        "//source/github:go_default_library",
        "@com_github_google_go_github//github:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["github_ee_test.go"],
    embed = [":go_default_library"],
)
