load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["go-bindata.go"],
    importpath = "github.com/golang-migrate/migrate/v4/source/go_bindata",
    visibility = ["//visibility:public"],
    deps = ["//source:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["go-bindata_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//source/go_bindata/testdata:go_default_library",
        "//source/testing:go_default_library",
    ],
)
