load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["storage.go"],
    importpath = "github.com/golang-migrate/migrate/v4/source/google_cloud_storage",
    visibility = ["//visibility:public"],
    deps = [
        "//source:go_default_library",
        "@com_google_cloud_go//storage:go_default_library",
        "@org_golang_google_api//iterator:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["storage_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//source:go_default_library",
        "//source/testing:go_default_library",
        "@com_github_fsouza_fake_gcs_server//fakestorage:go_default_library",
    ],
)
