load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["stub.go"],
    importpath = "github.com/golang-migrate/migrate/v4/source/stub",
    visibility = ["//visibility:public"],
    deps = ["//source:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["stub_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//source:go_default_library",
        "//source/testing:go_default_library",
    ],
)
